feat: wallet example
