# backend/app/entities/task_model.go
@@ -1,23 +1,0 @@
-package models
-
-import (
-	"time"
-
-	"github.com/google/uuid"
-)
-
-type Task struct {
-	ID          uuid.UUID `db:"id" json:"id"`
-	Title       string    `db:"title" json:"title"`
-	Description string    `db:"description" json:"description"`
-	Status      string    `db:"status" json:"status"`
-
-	CreatedBy  uuid.UUID `db:"created_by" json:"created_by"`
-	AssignedTo uuid.UUID `db:"assigned_to" json:"assigned_to"`
-
-	CreatedAt time.Time `db:"created_at" json:"created_at"`
-	UpdatedAt time.Time `db:"updated_at" json:"updated_at"`
-
-	Creator  User `gorm:"foreignKey:CreatedBy"`
-	Assignee User `gorm:"foreignKey:AssignedTo"`
-}
