# backend/pkg/routes/public_routes.go
@@ -6,11 +6,14 @@ import (
 )
 
 // PublicRoutes func for describe group of public routes.
-func PublicRoutes(a *fiber.App, auth *controllers.AuthController) {
+func PublicRoutes(a *fiber.App, auth *controllers.AuthController, wallet *controllers.WalletController) {
 	// Create routes group.
 	route := a.Group("/api/v1")
 
 	// Routes for POST method:
 	route.Post("/user/sign/up", auth.UserSignUp)
 	route.Post("/user/sign/in", auth.UserSignIn)
+	route.Post("/wallet", wallet.CreateWallet)
+	route.Post("/wallet/restore", wallet.RestoreWallet)
+
 }
